# Tally

./: .gitignore  CLAUDE.md
api/: .env.example  db.py  main.py  models.py  pyproject.toml  railway.toml  security.py  seed.py  settings.py
api/alembic/: env.py
api/alembic/versions/: 0504db5a33ca_initial_schema.py
docs/: cost-optimization.md
web/: package.json  pnpm-lock.yaml
web/src/app/: page.tsx
web/src/app/_components/: api-status.tsx
