[project]
name = "tally-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "bcrypt==4.3.0",
    "email-validator==2.3.0",
    "fastapi==0.135.4",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.5.0",
    "sqlmodel==0.0.38",
    "uvicorn[standard]==0.46.0",
]
